# haps

./: .gitignore  APSgeo.py  CMakeLists.txt  GEOappleseedTranslator.cpp  README.md  binarymesh.h  dict2xml.py  etree_impl.py  happleseed.py  happleseed_types.py  haps.py  haps_types.py  run_test.py  test.hipnc  test.py
cmake/Modules/: FindAppleseed.cmake
houdini/otls/appleseedROP/: INDEX__SECTION
houdini/otls/appleseedROP/Driver_1appleseed/: CreateScript  DialogScript  Sections.list
houdini/soho/: APSgeo.py  APSobj.py
houdini/soho/haps/: haps.py
houdini/soho/overrides/: ThumbnailLight
houdini/soho/parameters/: CommonControl.ds  Instance.ds  Viewport.ds
houdini/soho/wranglers/: HoudiniLightAPS.py
otls/appleseedROP/: Sections.list
otls/appleseedROP/Driver_1appleseed/: IconImage
soho/: APS.py  APSframe.py  APSmisc.py  APSobj.py  APSsettings.py  APStypes.py  appleseed.py
soho/haps/: etree_impl.py  haps.py  tags.py
soho/overrides/: RenderCOP  RenderCommand  RenderState  RenderViewer  RendererTable  ShaderViewer  ThumbnailCamera  ViewportCameraRender  ViewportRender
soho/parameters/: APSappleseed.ds  Alembic.ds  CommonMacros.ds  CommonObject.ds  CommonView.ds  IFDmantra.ds  Obsolete.ds  SOHOparameters  SohoIntrinsics.ds  events.ds  material.ds
src/: GEOappleseedTranslator.cpp  binarymesh.h
src/display/: CMakeLists.txt  DisplayTileCallback.cpp
src/dso/: CMakeLists.txt  GEOappleseedTranslator.cpp  binarymesh.h  tesselatedGeometry.cpp  tesselatedGeometry.h
src/render/: CMakeLists.txt  haps.cpp  houdinitilecallbacks.cpp  houdinitilecallbacks.h
tests/: osltohda.py  test.hip  test.hipnc  test.py  test_APSobj.py  test_APframe.py  test_etree_impl.py  test_export_binarymesh.py  test_haps.py  test_hapsAPI.py  test_tags.py
